Tweak conda-recipe/build.sh

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -2,8 +2,14 @@ package:
   name: pycodeexport
   version: "0.0.5"
 
+
 source:
+  #path: "../"
   url: https://github.com/bjodah/pycodeexport/archive/master.zip
+
+
+
+
 
 requirements:
   build:
