--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
 - '2.7'
 - '3.4'
 install:
+- sudo apt-get install python-numpy
 - pip install -r requirements.txt
 - python setup.py install
 script: py.test .
