--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
-language: python
-python:
-- '2.7'
-- '3.4'
+language: c
+# env:
+#   matrix:
+#     - PYTHON_VERSION=2.7 CONDA_PY=27
+#     - PYTHON_VERSION=3.4 CONDA_PY=34
+#   global:
+#     - CONDA_VERSION="3.10.1"
 install:
-- sudo apt-get install python-numpy
-- pip install -r requirements.txt
-- python setup.py install
-script: py.test .
-after_success:
-  - ./scripts/install_miniconda.sh $TRAVIS_PYTHON_VERSION $HOME/miniconda
+  - export CONDA_VERSION="3.10.1"
+  - export PYTHON_VERSION=3.4
+  - export CONDA_PY=34
+  - export MINICONDA_PATH=$HOME/miniconda
+  - echo $PYTHON_VERSION $MINICONDA_PATH $CONDA_VERSION
+  - sudo apt-get install gfortran g++ gcc
+  - source ./scripts/install_miniconda.sh $PYTHON_VERSION $MINICONDA_PATH $CONDA_VERSION
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda install conda-build
+script:
+  - conda build conda-recipe
+after_success:
   - ./scripts/travis_after_success.sh $HOME/miniconda
 notifications:
   email: false
