--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,5 @@
-image: bjodah/dockerfile-bjodah-scicomp
-git:
-    path: github.com/bjodah/pycodeexport
-script:
-  - python setup.py install
-  - py.test
+build:
+  image: bjodah/bjodahimg16dev:latest
+  commands:
+    - python3 -m pip install --user .
+    - python3 -m pytest
