Fix tests and CI scripts

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  path: ../dist/{{ name }}-{{ version }}.tar.gz
+  git_url: ../
 
 build:
   number: 0
