--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,7 @@
 build:
   image: bjodah/bjodahimg16base:v1.1
   commands:
+    - bash -c '[[ $(python setup.py --version) =~ ^[0-9]+.* ]]'
     - python2 -m pip install --upgrade wheel setuptools
     - python3 -m pip install --upgrade wheel setuptools
     - ./scripts/ci.sh pycodeexport
