Update release scripts

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -9,13 +9,15 @@ source:
   git_url: ../
 
 build:
+  noarch: python
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
     - setuptools
+    - pip
   run:
     - python
     - sympy
