--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,5 @@
 build:
-  image: bjodah/bjodahimg16base:v1.1
+  image: bjodah/bjodahimg20dev:v1.2.3
   commands:
     - bash -c '[[ $(python setup.py --version) =~ ^[0-9]+.* ]]'
     - python2 -m pip install --upgrade wheel setuptools
