--- a/.drone.yml
+++ b/.drone.yml
@@ -1,20 +1,24 @@
-build:
-  image: bjodah/bjodahimg16base:v1.1
-  commands:
-    - bash -c '[[ $(python setup.py --version) =~ ^[0-9]+.* ]]'
-    - python2 -m pip install --upgrade wheel setuptools
-    - python3 -m pip install --upgrade wheel setuptools
-    - ./scripts/ci.sh pycodeexport
-    - PATH=$HOME/.local/bin:$PATH ./scripts/generate_docs.sh
-    - ./scripts/prepare_deploy.sh
+pipeline:
+  build:
+    image: bjodah/bjodahimg20dev:v1.2.3
+    environment:
+      - CPLUS_INCLUDE_PATH=/opt/boost_1_73_p/include
+      - CC=gcc-10
+      - CXX=g++-10
+    commands:
+      - bash -c '[[ $(python3 setup.py --version) =~ ^[0-9]+.* ]]'
+      - python3 -m pip install --upgrade wheel setuptools
+      - ./scripts/ci.sh pycodeexport
+      - PATH=$HOME/.local/bin:$PATH ./scripts/generate_docs.sh
+      - ./scripts/prepare_deploy.sh
 
-deploy:
-
-  rsync:
-    host: hera.physchem.kth.se
-    user: pycodeexport
+  deploy:
+    image: drillster/drone-rsync
+    when:
+      event: [push]
+    hosts: [ "hera.physchem.kth.se" ]
     port: 22
-    source: deploy/
-    target: ~
-    recursive: true
-    delete: false
+    user: pycodeexport
+    secrets: [ rsync_key ]  # secret only set from event "push" not "pull_request"
+    source: ./deploy/public_html
+    target: ~/
