--- a/.woodpecker.yaml
+++ b/.woodpecker.yaml
@@ -8,4 +8,5 @@ steps:
       - PYTHONMALLOC=malloc
     commands:
       - ./scripts/ci.sh ${CI_REPO_NAME}
+      - bash -lc 'source $(compgen -G /opt-3/cpython-v3.*-apt-deb/bin/activate); ./scripts/generate_docs.sh'
       - ./scripts/prepare_deploy.sh
